--- a/src/Components/List/List.scss
+++ b/src/Components/List/List.scss
@@ -1,4 +1,18 @@
 .list {
   margin-left: 15rem;
   overflow-y: scroll;
+
+  &-element {
+    display: flex;
+    padding: 2rem;
+    box-shadow: 0 1px 10px 0 #e69500;
+
+    &--left {
+      flex: 1 0 40%;
+      padding-right: 5rem;
+    }
+    &--right {
+      flex: 1 0 60%;
+    }
+  }
 }
