--- a/src/Pages/Pokedex/Pokedex.scss
+++ b/src/Pages/Pokedex/Pokedex.scss
@@ -5,12 +5,21 @@
 
   &__sidebar {
     overflow-y: scroll;
-    border: 1px solid red;
     position: fixed;
     height: 100%;
     width: 15rem;
   }
 
   &__list {
+    padding: 0 1rem;
+
+    .list__item {
+      background-color: #f59f00;
+      padding: 1.2rem;
+      text-align: center;
+      margin: 1rem 0;
+      border-radius: 5px;
+      cursor: pointer;
+    }
   }
 }
